// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`set should set entities in key-value structure: set one 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
  },
  "ids": Array [
    1,
  ],
}
`;

exports[`set should set entities in key-value structure: set one 2`] = `
Object {
  "entities": Object {
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    2,
  ],
}
`;

exports[`set should set entities work with ref: set one 1`] = `
Object {
  "UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": false,
    },
  },
  "UIIds": Array [
    1,
  ],
}
`;

exports[`set should set entities work with ref: set one 2`] = `
Object {
  "UIEntities": Object {
    "2": Object {
      "id": 2,
      "open": false,
    },
  },
  "UIIds": Array [
    2,
  ],
}
`;

exports[`set should set entities: set one 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
  },
  "ids": Array [
    1,
  ],
}
`;

exports[`set should set entities: set one 2`] = `
Object {
  "entities": Object {
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    2,
  ],
}
`;
